# e-shop-template

./: .gitignore  LICENSE  Makefile
docs/: E-Shop Marketplace (Микросервисная архитектура).md  PAIR PROGRAMMING.md  lab5_tech_debt_report.md  usability software.md
infra/: .dockerignore  .env.example  docker-compose.prod.yml  docker-compose.yml
infra/keycloak/: Dockerfile
infra/minio/: 01-init-buckets.sh
infra/mongo/: 01-init-databse.js
infra/postgres/: 01-init-databases.sh
services/api-gateway/: .env.example  README.md  pyproject.toml
services/api-gateway/src/: main.py  settings.py
services/api-gateway/src/routers/: health.py
services/catalog/: .dockerignore  Dockerfile  pyproject.toml
services/catalog/migrations/: env.py
services/catalog/src/: config.py  database.py  dep.py  main.py
services/config/: Dockerfile  pyproject.toml
services/config/src/: config.py  db.py  main.py  models.py  routers.py  services.py
services/notification/: Dockerfile  pyproject.toml
services/notification/src/: config.py  main.py
services/notification/src/routers/: __init__.py  health.py
services/order/: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum
services/order/docs/: swagger.json
services/order/migrations/: 0001_create_tables.sql
services/payment/: .gitignore  Dockerfile  go.mod  go.sum
services/payment/docs/: swagger.json
services/payment/migrations/: 0001_create_tables.sql
services/user/: Dockerfile  pyproject.toml
services/user/migrations/: env.py
services/user/src/: config.py  database.py  dep.py  main.py
(+58 files in other folders)
