[project]
name = "config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "motor>=3.5.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "miniopy-async>=1.21.0",
    "python-multipart>=0.0.9",
]
