[project]
name = "notification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-multipart",
    "fastapi-mail",
    "python-telegram-bot==20.7",
    "pydantic-settings"
]
